# tinker-cookbook

./: .gitignore  IDEA.md  OPENREVIEW_EXPERIMENT_README.md  SACHIN_README.md  analyze_iclr_data.py  data_prep.py  explore_reviewer_fields.py  pyproject.toml  run_openreview_experiment.py  run_sft_gridsearch.sh  sft_gridsearch.sh  sft_gridsearch_parallel.sh  test.py
gaia_training/: METRICS.md  README.md  eval_gaia.py  gaia_gridsearch_parallel.sh  main.py  rl_loop_gaia.py  run_gaia.py  test_env.py  test_error_recovery.py  test_gaia_scenario.py  test_llm_judge.py  test_new_format.py  test_rl_rewards.py  test_tinker_connection.py  test_tools.py  test_web_tools.py  train_gaia.py
gaia_training/sh/: gaia_gridsearch_parallel_over_intrinsics.sh  gaia_gridsearch_parallel_v5_epochs.sh  run_gaia_gs32_batch32_with_prompt_improvements.sh  run_gaia_gs8_batch8_v4_llm_judge.sh  run_gaia_gs8_batch8_with_prompt_improvements.sh  run_gaia_gs8_batch8_with_prompt_improvements_v3.sh  run_training.sh  submit_gridsearch.sh
gaia_training/src/: __init__.py  agent.py  config.py  conversation.py  dataset.py  gaia_dataset_builder.py  gaia_env.py  gaia_tools.py  llm_judge.py  tinker_llm.py  tools.py  trajectory_logging.py
sh/: extract_chroma.sh  launch_all_experiments.sh  run_all_comparison.sh  run_modified_tool_use.sh  run_modified_tool_use_branching_search.sh  run_modified_tool_use_branching_search_src4.sh  run_prefix_testing.sh  run_tool_use_branching_search.sh  run_tool_use_branching_search_src4.sh  run_tool_use_branching_search_src4_branch4.sh  run_tool_use_branching_search_src6.sh  run_tool_use_branching_search_src6_with_lastmssg.sh  run_tool_use_search.sh  run_tree_grpo_demo.sh  test_trajectory_logging.sh
tests/: test_per_token_advantages.py  test_tree_rollout.py  test_tree_rollout_real.py
tinker_cookbook/: checkpoint_utils.py  checkpoint_utils_test.py  completers.py  completers_coalesce_test.py  model_info.py
tinker_cookbook/recipes/: openreview_common.py  rl_loop_openreview.py  sl_loop_openreview.py
tinker_cookbook/renderers/: __init__.py  gemma4.py
(+69 files in other folders)
