[project]
name = "tinker_cookbook"
version = "0.1.0"
description = "Implementations of post-training algorithms using the Tinker API"
readme = "README.md"
authors = [
{ name = "Tinker authors", email = "tinker@thinkingmachines.ai" },
]
requires-python = ">=3.11"
dependencies = [
    "chz",
    "datasets",
    "numpy",
    "rich",
    "termcolor",
    "tinker",
    "torch",
    "transformers",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena",
    "math-verify",
    "scipy",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.6",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "pandas>=2.3.3",
    "markitdown[all]>=0.1.3",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "ray>=2.50.0",
    "smolagents[modal]>=1.22.0",
    "ddgs>=9.6.1",
    "chromadb>=1.1.1",
    "tavily-python>=0.7.12",
    "google-genai>=1.41.0",
    "networkx>=3.5",
    "pydot>=4.0.1",
    "dash>=3.2.0",
    "dash-cytoscape>=1.0.2",
]

[project.urls]
Homepage = "https://thinkingmachines.ai/tinker"
Repository = "https://github.com/thinking-machines-lab/tinker"
Documentation = "https://tinker-docs.thinkingmachines.ai/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
vector-search = [
    "chromadb",
    "google-genai",
    "huggingface_hub"
]
wandb = [
    "wandb",
]
neptune-scale = [
    "neptune-scale>=0.27.0",
]
trackio = [
    "trackio<1.0.0",
]
verifiers = [
    "verifiers",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinker_cookbook"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
